<resources>
    <string name="app_name">CovidTimes</string>
    <string name="info">info</string>
    <string name="infoDesc1">View timely covid19 case count info in your area.\n
        Compare statistics by country or time-frame.
    </string>
    <string name="infoJHULink">Find more at <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/85320e2ea5424dfaaa75ae62e5c06e61">John Hopkins University</a>
    </string>
    <string name="infoExplore"> Start Exploring!</string>
    <string name="version">Version 1.0</string>

    <!-- Stats page -->
    <string name="statsDescription">Weekly Covid cases around the world.\nSelect a country and enter a starting date</string>
    <string name="stats_button">Stats</string>
    <string-array name="backupCountryList">
        <item>south-africa</item>
        <item>united-states</item>
        <item>australia</item>
    </string-array>
    <string name="search_button">Search</string>
    <string name="add_second_country">+</string>

    <string name="time_format">YYYYMMDD</string>
    <string name="title_activity_app_main_page">appMainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid-Times</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_vac">Vaccination Info</string>
    <string name="menu_about">About</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_guidelines">Health Guidelines</string>
    <string name="menu_history">History</string>

    <string name="info_CDC_LINK">Find more@ <a href="https://www.cdc.gov/coronavirus/2019-ncov/communication/guidance.html">Centers for Disease Control and Prevention</a>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notif_title">Stay up-to-date with Covid-Times</string>
    <string name="notif_text">Click to see the latest stats</string>

    <string name="pref_file_name">pref_file_name</string>
    <string name="pref_user_name">pref_user_name</string>
    <string name="detected_loc">Your detected state: </string>
    <string name="total_cases">Total cases: </string>
    <string name="new_cases">New cases: </string>
    <string name="total_deaths">Total deaths: </string>
    <string name="new_deaths">New deaths: </string>
    <string name="load_local">Detecting Local Info...</string>
    <string name="display_detected_loc">Detected Location:</string>
    <string name="display_detected_zip">Detected Zip:</string>
    <string name="doses_admined">Total Doses:</string>
    <string name="doses_new">New Doses:</string>
    <string name="updated_date">Updated:</string>
    <string name="doses_no_county">County stats not available</string>
    <string name="vac_prov_phone">"Vaccine Provider Phone:"</string>
    <string name="vac_prov_name">"Vaccine Provider Name:"</string>
    <string name="vac_prov_add">"Vaccine Provider Address:"</string>
    <string name="vac_prov_no">Cannot find vaccine provider for zip</string>



</resources>