<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_vac" />

        <item
            android:id="@+id/nav_stat"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_guidelines"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_guidelines" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />


    </group>
</menu>