<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.covidtimes.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.covidtimes.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_stat"
        android:name="com.example.covidtimes.ui.gallery.GalleryFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/activity_stats" />

    <fragment
        android:id="@+id/nav_guidelines"
        android:name="com.example.covidtimes.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_guidelines"
        tools:layout="@layout/content_main" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.covidtimes.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />

</navigation>