<?xml version="1.0" encoding="utf-8"?>
<!-- I shifted this page to new template but not completely-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statsDescription"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/backupCountryList" />

        <EditText
            android:id="@+id/etFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="6"
            android:hint="@string/time_format"
            android:inputType="number"/>

<!--        <EditText-->
<!--            android:id="@+id/etToDate"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:ems="6"-->
<!--            android:hint="@string/time_format" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onClickConfirm"
            android:text="@string/search_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStatsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

</LinearLayout>