<?xml version="1.0" encoding="utf-8"?>
<!-- this is new stats page-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/rona_bg"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding = "10dp"
        >

        <TextView
            android:id="@+id/tvStatsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statsDescription"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/backupCountryList" />

            <!--android:onClick="loadComparisonLayout"-->
            <Button
                android:id="@+id/addComparison"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"

                android:text="@string/add_second_country" />

            <Spinner
                android:id="@+id/spSecondCountry"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/backupCountryList"
                android:visibility="gone"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="6"
            android:hint="@string/time_format"
            android:inputType="number"/>

        <!--        <EditText-->
        <!--            android:id="@+id/etToDate"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:ems="6"-->
        <!--            android:hint="@string/time_format" />-->

        <!--android:onClick="onClickConfirm" -->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/search_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStatsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>